--- a/src/app/components/not-found/not-found.component.html
+++ b/src/app/components/not-found/not-found.component.html
@@ -1,6 +1,6 @@
 <p>
-  not-found works!
+    Content not found
 </p>
 <p>
-  <a [routerLink]="['/some-page']">Some page</a>
+    <a [routerLink]="['/search']">Search</a>
 </p>
