Added example menu

--- a/functions/test-db/scvo/sass.scss
+++ b/functions/test-db/scvo/sass.scss
@@ -79,9 +79,19 @@ body {
                 border-bottom-color: rgba(255,255,255,.5);
             }
         }
+        .mdc-tab-bar {
+            height: 64px;
+            margin: 0;
+        }
     }
     .mdc-toolbar__section.toolbar-search {
         vertical-align: middle;
+    }
+    .mdc-toolbar__section.toolbar-menu {
+        background: rgba(0,0,0,0.1);
+        .mdc-tab {
+            min-width: auto;
+        }
     }
 }
 .mdc-toolbar-fixed-adjust {
