--- a/functions/test-db/scvo/template.hbs
+++ b/functions/test-db/scvo/template.hbs
@@ -38,15 +38,16 @@
                 </div>
                 <div class="mdc-toolbar__row">
                     <div class="container-fluid">
-                        <section class="mdc-toolbar__section mdc-toolbar__section--align-start">
-                            <div>
-                                <!-- <nav id="toolbar-tab-bar" class="mdc-tab-bar mdc-tab-bar-upgraded">
-                                    <a class="mdc-tab mdc-ripple-upgraded mdc-tab--active mdc-ripple-upgraded--background-active-fill mdc-ripple-upgraded--foreground-activation" [routerLink]="['/jobs']">Jobs</a>
-                                    <a class="mdc-tab mdc-ripple-upgraded" [routerLink]="['/services']">Services</a>
-                                    <a class="mdc-tab mdc-ripple-upgraded" [routerLink]="['/running-a-charity']">Running a charity</a>
-                                    <span class="mdc-tab-bar__indicator"></span>
-                                </nav> -->
-                            </div>
+                        <section class="mdc-toolbar__section mdc-toolbar__section--align-start toolbar-menu">
+                            <nav id="basic-tab-bar" class="mdc-tab-bar">
+                                <a class="mdc-tab" href="/">Home</a>
+                                <a class="mdc-tab" href="/running-a-charity">Running a charity</a>
+                                <a class="mdc-tab" href="/jobs">Jobs</a>
+                                <a class="mdc-tab" href="/services">Services</a>
+                                <a class="mdc-tab" href="/projects-and-campaigns">Projects &amp; campaigns</a>
+                                <a class="mdc-tab" href="/policy-and-research">Policy &amp; research</a>
+                                <!-- <span class="mdc-tab-bar__indicator"></span> -->
+                            </nav>
                         </section>
                     </div>
                 </div>
