Using domain stripping functionality in menu routes

--- a/functions/test-db/scvo/template.hbs
+++ b/functions/test-db/scvo/template.hbs
@@ -40,13 +40,9 @@
                     <div class="container-fluid">
                         <section class="mdc-toolbar__section mdc-toolbar__section--align-start toolbar-menu">
                             <nav id="basic-tab-bar" class="mdc-tab-bar">
-                                <a class="mdc-tab" href="/">Home</a>
-                                <a class="mdc-tab" href="/running-a-charity">Running a charity</a>
-                                <a class="mdc-tab" href="/jobs">Jobs</a>
-                                <a class="mdc-tab" href="/services">Services</a>
-                                <a class="mdc-tab" href="/projects-and-campaigns">Projects &amp; campaigns</a>
-                                <a class="mdc-tab" href="/policy-and-research">Policy &amp; research</a>
-                                <!-- <span class="mdc-tab-bar__indicator"></span> -->
+                                {{#each menus.main}}
+                                    <a class="mdc-tab" href="{{path}}">{{label}}</a>
+                                {{/each}}
                             </nav>
                         </section>
                     </div>
