--- a/functions/test-db/scvo/sass.scss
+++ b/functions/test-db/scvo/sass.scss
@@ -119,6 +119,16 @@ body {
     background-position: center center;
 }
 
+.featured.mdc-card {
+    height:20rem;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    .mdc-card__primary, .mdc-card__actions {
+        background-color: rgba(0, 0, 0, .6);
+    }    
+}
+
 .inline-list {
     display: inline-block;
     margin: 0;
