Added title to post template

--- a/functions/test-db/scvo/sass.scss
+++ b/functions/test-db/scvo/sass.scss
@@ -131,7 +131,19 @@ main {
     background-size: cover;
     height: 33.333vh;
     background-position: center center;
+    .mdc-layout-grid {
+        position: relative;
+        height: 25vh;
+        .post-title {
+            position: absolute;
+            margin: 0;
+            bottom: 0;
+            left: 24px;
+            color: white;
+        }
+    }
 }
+
 
 .featured.mdc-card {
     height:20rem;
