--- a/functions/test-db/scvo/sass.scss
+++ b/functions/test-db/scvo/sass.scss
@@ -9,16 +9,12 @@
     --mdc-theme-secondary-light: #819ca9;
     --mdc-theme-secondary-dark: #29434e;
     --mdc-theme-background: #ededed;
+    --mdc-typography-font-family: "Open Sans", "Helvetica", Arial, sans-serif;
 }
-
-$mdc-typography-font-family: "Open Sans", "Helvetica", Arial, sans-serif;
 
 $scvo-background-color: #263238;
 
 $spacing-unit: 1rem;
-
-$base-font-family: "Open Sans", "Helvetica", Arial, sans-serif;
-$logo-font-family: "Open Sans", "Helvetica", Arial, sans-serif;
 
 .hero {
     display: -webkit-box;
