--- a/functions/test-db/scvo/template.hbs
+++ b/functions/test-db/scvo/template.hbs
@@ -16,7 +16,7 @@
     {{{route.jsonLd}}}
     </script>
 </head>
-<body>
+<body class="{{path}}">
     <scvo-site>
         <div class="mdc-typography">
             <header class="mdc-toolbar mdc-toolbar--fixed">
