--- a/functions/test-db/scvo/post-template.hbs
+++ b/functions/test-db/scvo/post-template.hbs
@@ -2,7 +2,7 @@
 <div class="splash-image" style="background-image: linear-gradient(to bottom left,rgba(0, 77, 65, 0.29),#00796b),url({{original_image}});position: relative;">
     <div class="container-fluid">
         <div class="mdc-layout-grid">
-            <h1 class="post-title">{{sanitize title}}</h1>
+            <h1 class="post-title">{{#with primaryResponse.hits.hits.[0]._source}}{{sanitize title}}{{/with}}</h1>
         </div>
     </div>
 </div>
