Added breadcrumbs to pages and stripping domains names from all content

--- a/functions/test-db/json2/scvo/sass.scss
+++ b/functions/test-db/json2/scvo/sass.scss
@@ -167,6 +167,26 @@ main {
     }
 }
 
+ul.breadcrumb {
+    list-style: none;
+    margin: 15px 0;
+    padding: 0;
+    li {
+        display: inline-block;
+        margin: 0;
+        padding: 0;
+    }
+
+    li:before {
+        content: "\2215";
+        margin-right: 15px;
+    }
+
+    li:not(:last-child) {
+        margin-right: 5px;
+    }
+}
+
 ul.supplimentary-list {
     margin:0;
     padding:0;
