--- a/functions/test-db/json2/scvo/sass.scss
+++ b/functions/test-db/json2/scvo/sass.scss
@@ -91,16 +91,16 @@ a {
                 border-bottom-color: rgba(255,255,255,.5);
             }
             ::-webkit-input-placeholder {
-              color: white;
+              color: rgba(255, 255, 255, 0.6);
             }
             ::-moz-placeholder {
-              color: white;
+              color: rgba(255, 255, 255, 0.6);
             }
             :-ms-input-placeholder {
-              color: white;
+              color: rgba(255, 255, 255, 0.6);
             }
             :-moz-placeholder {
-              color: white;
+              color: rgba(255, 255, 255, 0.6);
             }
         }
         .mdc-tab-bar {
