--- a/functions/test-db/json2/scvo/queries/search.hbs
+++ b/functions/test-db/json2/scvo/queries/search.hbs
@@ -4,9 +4,11 @@
             "must": []
         }
     },
-    "sort": [{
-        "Id": {
-            "order": "desc"
+    "sort": [
+        {
+            "Id": {
+                "order": "desc"
+            }
         }
-    }]
+    ]
 }
