--- a/functions/test-db/json2/scvo/sass.scss
+++ b/functions/test-db/json2/scvo/sass.scss
@@ -116,6 +116,9 @@ a {
             }
         }
     }
+    .mdc-toolbar__icon:last-of-type {
+        padding-right: 0;
+    }
     .mdc-toolbar__section.toolbar-search {
         vertical-align: middle;
     }
@@ -138,6 +141,9 @@ a {
 }
 .mdc-toolbar__icon--menu:focus {
     outline: none;
+}
+.mdc-form-field {
+    font-size: 1rem;
 }
 
 .action-buttons-right {
@@ -190,7 +196,7 @@ a {
 
 ul.breadcrumb {
     list-style: none;
-    margin: $spacing-unit/2 0;
+    // margin: $spacing-unit/2 0;
     padding: 0;
     li {
         display: inline-block;
