--- a/functions/test-db/json2/scvo/templates/default.hbs
+++ b/functions/test-db/json2/scvo/templates/default.hbs
@@ -1,16 +1,17 @@
-<div class="container-fluid">
-    {{#with primaryResponse.hits.hits.[0]._source}}
-        {{#if breadcrumb}}
-            <ul class="breadcrumb">
-                <li><a href="/">Home</a></li>
-                {{#each breadcrumb}}
-                    <li>
-                        <a href="{{url}}">{{{striptags title}}}</a>
-                    </li>
-                {{/each}}
-            </ul>
-        {{/if}}
-
-        {{{rendered.full}}}   
-    {{/with}}
+{{#with primaryResponse.hits.hits.[0]._source}}
+<div class="container-fluid breadcrumb">
+    {{#if breadcrumb}}
+    <ul class="breadcrumb">
+        <li><a href="/">Home</a></li>
+        {{#each breadcrumb}}
+        <li>
+            <a href="{{url}}">{{{striptags title}}}</a>
+        </li>
+        {{/each}}
+    </ul>
+    {{/if}}
 </div>
+<div class="container-fluid">
+    {{{rendered.full}}}
+</div>
+{{/with}}
