--- a/functions/test-db/json2/scvo/templates/scvo.hbs
+++ b/functions/test-db/json2/scvo/templates/scvo.hbs
@@ -33,14 +33,16 @@
     {{{route.jsonLd}}}
     </script>
 </head>
-<body class="">
+<body class="{{path}}">
     <scvo-site>
         <div class="mdc-typography">
             <header class="mdc-toolbar mdc-toolbar--fixed">
                 <div class="mdc-toolbar__row">
                     <div class="container-fluid">
                         <section class="mdc-toolbar__section mdc-toolbar__section--align-start">
-                            <button class="menu mdc-toolbar__icon--menu" onclick="menu_draw.MDCTemporaryDrawer.open = true"><span class="fa fa-2x fa-bars" aria-hidden="true"></span></button>
+                            <button class="menu mdc-toolbar__icon--menu" onclick="menu_draw.MDCTemporaryDrawer.open = true">
+                                <span class="fa fa-2x fa-bars" aria-hidden="true"></span>
+                            </button>
                             <span class="mdc-toolbar__title catalog-title">SCVO</span>
                         </section>
                         <section class="mdc-toolbar__section mdc-toolbar__section--align-end toolbar-search">
@@ -49,6 +51,7 @@
                                     <input type="text" class="mdc-textfield__input white-text searchRoute" placeholder="Search" id="search"
                                     [searchRoute]='"main-search"' [paramsTemplate]='"{ \"queryParams\": { \"q\": %q } }"'>
                                 </div>
+                                <a href="#" class="material-icons mdc-toolbar__icon" aria-label="Search" alt="Search">search</a>
                             </div>
                         </section>
                     </div>
