Minor styling improvements

--- a/functions/test-db/json2/scvo/sass.scss
+++ b/functions/test-db/json2/scvo/sass.scss
@@ -69,6 +69,7 @@ a {
     padding: $spacing-unit/2;
 }
 .mdc-toolbar {
+    height: 64px;
     .container-fluid {
         display: -webkit-box;
         display: -ms-flexbox;
@@ -76,7 +77,6 @@ a {
         position: relative;
         -webkit-box-sizing: border-box;
         box-sizing: border-box;
-        width: 100%;
         padding: 0;
         .mdc-toolbar__title {
             margin-left: 12px;
