--- a/functions/test-db/json2/scvo/sass.scss
+++ b/functions/test-db/json2/scvo/sass.scss
@@ -74,7 +74,7 @@ a {
 }
 
 .mdc-toolbar {
-    .mdc-toolbar-row {
+    .mdc-toolbar__row {
         height: 64px;
         .container-fluid {
             display: -webkit-box;
