--- a/functions/test-db/json2/scvo/sass.scss
+++ b/functions/test-db/json2/scvo/sass.scss
@@ -155,6 +155,13 @@ a {
 .mdc-toolbar-fixed-adjust {
     margin-top: 128px;
 }
+.mdc-temporary-drawer {
+    .mdc-list {
+        .mdc-list-item__start-detail {
+            display: none;
+        }
+    }
+}
 
 .action-buttons-right {
     flex-direction: row-reverse;
