--- a/functions/test-db/json2/scvo/templates/scvo.hbs
+++ b/functions/test-db/json2/scvo/templates/scvo.hbs
@@ -33,7 +33,7 @@
     {{{route.jsonLd}}}
     </script>
 </head>
-<body class="{{path}}">
+<body class="{{replace route.params.path '_' ' '}}">
     <scvo-site>
         <div class="mdc-typography">
             <header class="mdc-toolbar mdc-toolbar--fixed">
