--- a/functions/test-db/json2/scvo/templates/scvo.hbs
+++ b/functions/test-db/json2/scvo/templates/scvo.hbs
@@ -18,7 +18,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/app/assets/icons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="96x96" href="/app/assets/icons/favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/app/assets/icons/favicon-16x16.png">
-    <link rel="manifest" href="/mapp/assets/icons/manifest.json">
+    <link rel="manifest" href="/app/assets/icons/manifest.json">
     <meta name="msapplication-TileColor" content="#00838f">
     <meta name="msapplication-TileImage" content="/app/assets/icons/ms-icon-144x144.png">
     <meta name="theme-color" content="#00838f">
@@ -127,7 +127,9 @@
                             <div class="footer-copyright">
                                 <div class="row">
                                     <div class="col-sm-12">
-                                        <p><small>&copy; 2017. The Scottish Council for Voluntary Organisations (SCVO) is a Scottish Charitable Incorporated Organisation. Charity registered in Scotland <a href="http://www.oscr.org.uk/charities/search-scottish-charity-register/charity-details?number=SC003558">SC003558</a>.</small></p>
+                                        <p>
+                                            <small>&copy; 2017. The Scottish Council for Voluntary Organisations (SCVO) is a Scottish Charitable Incorporated Organisation. Charity registered in Scotland <a href="http://www.oscr.org.uk/charities/search-scottish-charity-register/charity-details?number=SC003558">SC003558</a>.</small>
+                                        </p>
                                     </div>
                                 </div>
                             </div>
